fix button styles for albums panel in edit mode
git-svn-id: https://plugins.svn.wordpress.org/gallery-factory-lite/trunk@1181500 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -144,6 +144,8 @@ body.toplevel_page_vls_gf_gallery_manager .vls-gf-gallery-manager-container .lef
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   cursor: pointer;
+  background-color: transparent;
+  border: none;
 }
 body.toplevel_page_vls_gf_gallery_manager .vls-gf-gallery-manager-container .left-panel #vls-gf-gallery-tree li > .btn:hover {
   color: #222;
