--- a/admin/less/style.less
+++ b/admin/less/style.less
@@ -182,7 +182,8 @@ body.toplevel_page_vls_gf_gallery_manager {
                         text-rendering: auto;
                         -webkit-font-smoothing: antialiased;
                         cursor: pointer;
-                        //background-color: #f3f3f3;
+                        background-color: transparent;
+                        border: none;
 
                         &:hover {
                             color: #222;
