--- a/frontend/less/style.less
+++ b/frontend/less/style.less
@@ -361,17 +361,19 @@
 
     .vls-gf-info-caption {
         color: white;
-        padding: 10px 10px;
-        font-size: 20px;
-        text-transform: uppercase;
         margin: 0;
+        padding: 10px 10px;
+        font-size: 1.1em;
+        text-transform: uppercase;
+        text-align: center;
     }
 
     .vls-gf-info-description {
         color: white;
-        padding: 2px 10px;
         margin: 0 0 10px 0;
-        font-size: 14px;
+        padding: 2px 10px;
+        font-size: 0.8em;
+        text-align: center
     }
 }
 
