--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -250,16 +250,18 @@
 }
 .vls-gf-info-back .vls-gf-info-caption {
   color: white;
-  padding: 10px 10px;
-  font-size: 20px;
-  text-transform: uppercase;
   margin: 0;
+  padding: 10px 10px;
+  font-size: 1.1em;
+  text-transform: uppercase;
+  text-align: center;
 }
 .vls-gf-info-back .vls-gf-info-description {
   color: white;
-  padding: 2px 10px;
   margin: 0 0 10px 0;
-  font-size: 14px;
+  padding: 2px 10px;
+  font-size: 0.8em;
+  text-align: center;
 }
 .vls-gf-album-info-none .vls-gf-info-caption {
   display: none;
